fix(analysis): answer the three Qodana findings the audit left
Extended verification runs Qodana, and the audit commit was checked with
Default verification only, so three findings reached main and failed the
self-verification workflow twice.

PublicationContentCheck read a publication file as bytes and decoded
them itself, where Files.readString takes the charset directly. The two
are the same read for ISO-8859-1, which has a character for every byte
and so cannot raise the decoding error that makes the longer form worth
writing elsewhere.

SecretScanConfiguration named its new parameter a String where it only
ever asks for a length and hands the value to a matcher, both of which
CharSequence answers. That is the type the method it replaced took.

MavenModelBypassTest passed the plugin name to its fixture helper at
every call with the one value it can take, so the helper names the test
runner itself and takes only the body that differs.